--- a/tests/recordings/test_page_blob.test_put_page_if_sequence_number_lt_success.yaml
+++ b/tests/recordings/test_page_blob.test_put_page_if_sequence_number_lt_success.yaml
@@ -4,26 +4,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [823b9bcc-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:28 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a454ee16-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:42 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerb8c517c2/blobb8c517c2
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:28 GMT']
-      ETag: ['"0x8D64698667DB0A6"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:28 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:41 GMT']
+      ETag: ['"0x8D6BBFA889CC265"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:42 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [95194800-601e-003e-0881-78790a000000]
+      x-ms-request-id: [31d68f28-d01e-0053-59e3-ed48db000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -39,38 +39,38 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [82534740-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:28 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a46d6a5e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:42 GMT']
       x-ms-if-sequence-number-lt: ['11']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerb8c517c2/blobb8c517c2?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [0yCf/WT+qeqXjzvFu9e8Cw==]
-      Date: ['Fri, 09 Nov 2018 23:09:28 GMT']
-      ETag: ['"0x8D6469866852C7F"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:28 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:41 GMT']
+      ETag: ['"0x8D6BBFA88A37A67"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:42 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['10']
-      x-ms-request-id: [9519481a-601e-003e-1e81-78790a000000]
+      x-ms-request-id: [31d68f3a-d01e-0053-68e3-ed48db000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [825aa756-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:28 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a4743fd2-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:42 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainerb8c517c2/blobb8c517c2
   response:
@@ -90,18 +90,18 @@ interactions:
       Content-Length: ['512']
       Content-Range: [bytes 0-511/512]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:28 GMT']
-      ETag: ['"0x8D6469866852C7F"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:28 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:41 GMT']
+      ETag: ['"0x8D6BBFA88A37A67"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:42 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:28 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:42 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [95194827-601e-003e-2981-78790a000000]
+      x-ms-request-id: [31d68f46-d01e-0053-71e3-ed48db000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
