--- a/tests/recordings/test_page_blob.test_set_sequence_number_blob.yaml
+++ b/tests/recordings/test_page_blob.test_set_sequence_number_blob.yaml
@@ -4,59 +4,59 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [836100b4-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [a5c4afb6-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer938011f2/blob938011f2
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      ETag: ['"0x8D6469867B0AE3D"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      ETag: ['"0x8D6BBFA8A0BD787"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:45 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [65e464f2-401e-0044-4e81-781347000000]
+      x-ms-request-id: [7fed626f-701e-013c-23e3-eda65a000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-sequence-number: ['6']
-      x-ms-client-request-id: [8386b2b4-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      x-ms-client-request-id: [a5dc7cfe-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:45 GMT']
       x-ms-sequence-number-action: [update]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer938011f2/blob938011f2?comp=properties
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      ETag: ['"0x8D6469867B82A12"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      ETag: ['"0x8D6BBFA8A121A3B"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:45 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['6']
-      x-ms-request-id: [65e4650e-401e-0044-6781-781347000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [7fed6281-701e-013c-34e3-eda65a000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [838dd0c6-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      x-ms-version: ['2018-03-28']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [a5e62510-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      x-ms-version: ['2018-11-09']
     method: HEAD
     uri: https://storagename.blob.core.windows.net/utcontainer938011f2/blob938011f2
   response:
@@ -65,20 +65,20 @@ interactions:
       Accept-Ranges: [bytes]
       Content-Length: ['512']
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:30 GMT']
-      ETag: ['"0x8D6469867B82A12"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      Date: ['Mon, 08 Apr 2019 08:16:45 GMT']
+      ETag: ['"0x8D6BBFA8A121A3B"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:16:45 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-access-tier: [Hot]
       x-ms-access-tier-inferred: ['true']
       x-ms-blob-sequence-number: ['6']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:30 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:16:45 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [65e4651d-401e-0044-7481-781347000000]
+      x-ms-request-id: [7fed629c-701e-013c-4ae3-eda65a000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 200, message: OK}
 version: 1
