--- a/tests/recordings/test_page_blob.test_update_page_if_sequence_number_eq_failure.yaml
+++ b/tests/recordings/test_page_blob.test_update_page_if_sequence_number_eq_failure.yaml
@@ -4,26 +4,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [84f3b21e-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:33 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [beee6cfc-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:27 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerff0918d1/blobff0918d1
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:33 GMT']
-      ETag: ['"0x8D646986935D741"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:17:26 GMT']
+      ETag: ['"0x8D6BBFAA337549C"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:27 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [f5fd9948-901e-004d-1481-7809c9000000]
+      x-ms-request-id: [73c7c99f-001e-0133-0ce3-ed4bac000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -39,26 +39,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [850b6db4-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [bf082084-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:27 GMT']
       x-ms-if-sequence-number-eq: ['9']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerff0918d1/blobff0918d1?comp=page
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>SequenceNumberConditionNotMet</Code><Message>The\
-        \ sequence number condition specified was not met.\nRequestId:f5fd9960-901e-004d-2a81-7809c9000000\n\
-        Time:2018-11-09T23:09:33.4105233Z</Message></Error>"}
+        \ sequence number condition specified was not met.\nRequestId:73c7c9b9-001e-0133-25e3-ed4bac000000\n\
+        Time:2019-04-08T08:17:27.4472377Z</Message></Error>"}
     headers:
       Content-Length: ['250']
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      Date: ['Mon, 08 Apr 2019 08:17:26 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       x-ms-error-code: [SequenceNumberConditionNotMet]
-      x-ms-request-id: [f5fd9960-901e-004d-2a81-7809c9000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [73c7c9b9-001e-0133-25e3-ed4bac000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 412, message: The sequence number condition specified was not met.}
 version: 1
