--- a/tests/recordings/test_page_blob.test_update_page_if_sequence_number_eq_success.yaml
+++ b/tests/recordings/test_page_blob.test_update_page_if_sequence_number_eq_success.yaml
@@ -4,26 +4,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [8541f136-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:33 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [c1d9aecc-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:32 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerff7a18e2/blobff7a18e2
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:33 GMT']
-      ETag: ['"0x8D646986984CD98"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:17:31 GMT']
+      ETag: ['"0x8D6BBFAA623640A"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:32 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [33427d04-f01e-003b-2a81-788d75000000]
+      x-ms-request-id: [1d402f79-c01e-012e-78e3-ed9246000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -39,38 +39,38 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [855a4286-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [c1f464a6-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:32 GMT']
       x-ms-if-sequence-number-eq: ['10']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerff7a18e2/blobff7a18e2?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [hd5oBKwnL2pXEyWJU5FhyQ==]
-      Date: ['Fri, 09 Nov 2018 23:09:33 GMT']
-      ETag: ['"0x8D64698698BAD14"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      Date: ['Mon, 08 Apr 2019 08:17:31 GMT']
+      ETag: ['"0x8D6BBFAA62A914D"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:32 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['10']
-      x-ms-request-id: [33427d19-f01e-003b-3c81-788d75000000]
+      x-ms-request-id: [1d402f98-c01e-012e-14e3-ed9246000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [8561490a-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [c1fb75d4-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:32 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainerff7a18e2/blobff7a18e2
   response:
@@ -90,18 +90,18 @@ interactions:
       Content-Length: ['512']
       Content-Range: [bytes 0-511/512]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:33 GMT']
-      ETag: ['"0x8D64698698BAD14"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      Date: ['Mon, 08 Apr 2019 08:17:31 GMT']
+      ETag: ['"0x8D6BBFAA62A914D"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:32 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:17:32 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [33427d26-f01e-003b-4681-788d75000000]
+      x-ms-request-id: [1d402fb0-c01e-012e-2be3-ed9246000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
