--- a/tests/recordings/test_page_blob.test_update_page_if_sequence_number_lt_failure.yaml
+++ b/tests/recordings/test_page_blob.test_update_page_if_sequence_number_lt_failure.yaml
@@ -4,26 +4,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [859d3960-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:34 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [c2feaeba-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:34 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerff6a18db/blobff6a18db
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:33 GMT']
-      ETag: ['"0x8D6469869E09845"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:34 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:17:33 GMT']
+      ETag: ['"0x8D6BBFAA7469549"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:34 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [95195317-601e-003e-5981-78790a000000]
+      x-ms-request-id: [5aef4043-001e-0111-4fe3-ed259a000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -39,26 +39,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [85b67e2a-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:34 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [c3176428-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:34 GMT']
       x-ms-if-sequence-number-lt: ['10']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainerff6a18db/blobff6a18db?comp=page
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>SequenceNumberConditionNotMet</Code><Message>The\
-        \ sequence number condition specified was not met.\nRequestId:9519532a-601e-003e-6881-78790a000000\n\
-        Time:2018-11-09T23:09:34.5484327Z</Message></Error>"}
+        \ sequence number condition specified was not met.\nRequestId:5aef4065-001e-0111-6de3-ed259a000000\n\
+        Time:2019-04-08T08:17:34.2561962Z</Message></Error>"}
     headers:
       Content-Length: ['250']
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:33 GMT']
+      Date: ['Mon, 08 Apr 2019 08:17:33 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       x-ms-error-code: [SequenceNumberConditionNotMet]
-      x-ms-request-id: [9519532a-601e-003e-6881-78790a000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [5aef4065-001e-0111-6de3-ed259a000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 412, message: The sequence number condition specified was not met.}
 version: 1
