--- a/tests/recordings/test_page_blob.test_update_page_if_sequence_number_lte_failure.yaml
+++ b/tests/recordings/test_page_blob.test_update_page_if_sequence_number_lte_failure.yaml
@@ -4,26 +4,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [85ef2bda-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:34 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [c66f7728-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:39 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer189a1940/blob189a1940
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:34 GMT']
-      ETag: ['"0x8D646986A31D919"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:35 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:17:39 GMT']
+      ETag: ['"0x8D6BBFAAAB692C0"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:39 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [adccbfbf-501e-0036-4881-786279000000]
+      x-ms-request-id: [d60b3167-701e-00bb-26e3-edb520000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -39,26 +39,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [86076632-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:35 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [c6875a3c-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:40 GMT']
       x-ms-if-sequence-number-le: ['9']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer189a1940/blob189a1940?comp=page
   response:
     body: {string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>SequenceNumberConditionNotMet</Code><Message>The\
-        \ sequence number condition specified was not met.\nRequestId:adccbff3-501e-0036-7481-786279000000\n\
-        Time:2018-11-09T23:09:35.0755343Z</Message></Error>"}
+        \ sequence number condition specified was not met.\nRequestId:d60b317b-701e-00bb-36e3-edb520000000\n\
+        Time:2019-04-08T08:17:40.0303671Z</Message></Error>"}
     headers:
       Content-Length: ['250']
       Content-Type: [application/xml]
-      Date: ['Fri, 09 Nov 2018 23:09:34 GMT']
+      Date: ['Mon, 08 Apr 2019 08:17:39 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
       x-ms-error-code: [SequenceNumberConditionNotMet]
-      x-ms-request-id: [adccbff3-501e-0036-7481-786279000000]
-      x-ms-version: ['2018-03-28']
+      x-ms-request-id: [d60b317b-701e-00bb-36e3-edb520000000]
+      x-ms-version: ['2018-11-09']
     status: {code: 412, message: The sequence number condition specified was not met.}
 version: 1
