--- a/tests/recordings/test_page_blob.test_update_page_if_sequence_number_lte_success.yaml
+++ b/tests/recordings/test_page_blob.test_update_page_if_sequence_number_lte_success.yaml
@@ -4,26 +4,26 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['0']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
       x-ms-blob-content-length: ['512']
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-client-request-id: [86403f20-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:35 GMT']
-      x-ms-version: ['2018-03-28']
+      x-ms-client-request-id: [c6f4084e-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:40 GMT']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer190b1951/blob190b1951
   response:
     body: {string: ''}
     headers:
-      Date: ['Fri, 09 Nov 2018 23:09:34 GMT']
-      ETag: ['"0x8D646986A816BDA"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:35 GMT']
+      Content-Length: ['0']
+      Date: ['Mon, 08 Apr 2019 08:17:40 GMT']
+      ETag: ['"0x8D6BBFAAB3D1956"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
-      x-ms-request-id: [1a634445-e01e-0042-2a81-78e43f000000]
+      x-ms-request-id: [f7da4be4-901e-0076-07e3-edd068000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: !!binary |
@@ -39,38 +39,38 @@ interactions:
     headers:
       Connection: [keep-alive]
       Content-Length: ['512']
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [865720f0-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:35 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [c70dd6ac-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:40 GMT']
       x-ms-if-sequence-number-le: ['10']
       x-ms-page-write: [update]
       x-ms-range: [bytes=0-511]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: PUT
     uri: https://storagename.blob.core.windows.net/utcontainer190b1951/blob190b1951?comp=page
   response:
     body: {string: ''}
     headers:
+      Content-Length: ['0']
       Content-MD5: [BKVxeaisVBgz501F4cbebw==]
-      Date: ['Fri, 09 Nov 2018 23:09:34 GMT']
-      ETag: ['"0x8D646986A88999E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:35 GMT']
+      Date: ['Mon, 08 Apr 2019 08:17:40 GMT']
+      ETag: ['"0x8D6BBFAAB4669D8"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Transfer-Encoding: [chunked]
       x-ms-blob-sequence-number: ['10']
-      x-ms-request-id: [1a63445e-e01e-0042-3e81-78e43f000000]
+      x-ms-request-id: [f7da4bff-901e-0076-1ee3-edd068000000]
       x-ms-request-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     status: {code: 201, message: Created}
 - request:
     body: null
     headers:
       Connection: [keep-alive]
-      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.2.0)]
-      x-ms-client-request-id: [865e60ea-e474-11e8-9ac5-acde48001122]
-      x-ms-date: ['Fri, 09 Nov 2018 23:09:35 GMT']
+      User-Agent: [Azure-Storage/1.4.0-1.4.0 (Python CPython 3.7.0; Darwin 18.5.0)]
+      x-ms-client-request-id: [c7171e56-59d6-11e9-842a-acde48001122]
+      x-ms-date: ['Mon, 08 Apr 2019 08:17:40 GMT']
       x-ms-range: [bytes=0-33554431]
-      x-ms-version: ['2018-03-28']
+      x-ms-version: ['2018-11-09']
     method: GET
     uri: https://storagename.blob.core.windows.net/utcontainer190b1951/blob190b1951
   response:
@@ -90,18 +90,18 @@ interactions:
       Content-Length: ['512']
       Content-Range: [bytes 0-511/512]
       Content-Type: [application/octet-stream]
-      Date: ['Fri, 09 Nov 2018 23:09:34 GMT']
-      ETag: ['"0x8D646986A88999E"']
-      Last-Modified: ['Fri, 09 Nov 2018 23:09:35 GMT']
+      Date: ['Mon, 08 Apr 2019 08:17:40 GMT']
+      ETag: ['"0x8D6BBFAAB4669D8"']
+      Last-Modified: ['Mon, 08 Apr 2019 08:17:40 GMT']
       Server: [Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0]
-      Vary: [Origin]
       x-ms-blob-sequence-number: ['10']
       x-ms-blob-type: [PageBlob]
-      x-ms-creation-time: ['Fri, 09 Nov 2018 23:09:35 GMT']
+      x-ms-creation-time: ['Mon, 08 Apr 2019 08:17:40 GMT']
       x-ms-lease-state: [available]
       x-ms-lease-status: [unlocked]
-      x-ms-request-id: [1a634475-e01e-0042-5181-78e43f000000]
+      x-ms-request-id: [f7da4c13-901e-0076-30e3-edd068000000]
       x-ms-server-encrypted: ['true']
-      x-ms-version: ['2018-03-28']
+      x-ms-tag-count: ['0']
+      x-ms-version: ['2018-11-09']
     status: {code: 206, message: Partial Content}
 version: 1
